🔧 Technical fixes for Web App (no design changes)
Security fixes:
- Fix XSS vulnerability: Escape user URLs in history list
- Fix XSS vulnerability: Use textContent for risk flags

Technical fixes:
- Add favicon link (assets/logo.svg)
- Add PWA manifest link
- Fix button reset to use Material Icons consistently (not emoji)
- Improve toast with proper success/warning styling
- Add escapeHtml utility function

--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -20,6 +20,10 @@
     <!-- Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 
+    <!-- Favicon & PWA -->
+    <link rel="icon" type="image/svg+xml" href="assets/logo.svg">
+    <link rel="manifest" href="manifest.json">
+
     <link rel="stylesheet" href="styles.css">
 
     <!-- Core JS QR library for camera scanning -->
